<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white">

        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/sort_date_desc"  android:title="@string/sort_date_desc"  android:checked="true" />
                <item android:id="@+id/sort_date_asc"   android:title="@string/sort_date_asc" />
                <item android:id="@+id/sort_title_asc"  android:title="@string/sort_title_asc" />
                <item android:id="@+id/sort_title_desc" android:title="@string/sort_title_desc" />
            </group>
        </menu>
    </item>

</menu>
